Reduce initial chat size, fix overflow on narrow screens

--- a/src/App.css
+++ b/src/App.css
@@ -21,6 +21,7 @@ body,
 .Splitview {
   display: flex;
   flex: 1 0;
+  width: 100%;
 }
 
 .Splitview.split-vertical {
